--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Portal Mundo Conectado do Centro do Paraná</h1>
-    <h2>Formadores em Ação - Programação Ensino Médio</h2>
+    <h1>Portal tudo sobre o flamengo</h1>
+    <h2> Programação Ensino Médio</h2>
     <link rel="stylesheet" href="style.css">
     
-    <p>Vamos conectar toda a região centro do estado com notícias, tendências, costumes, cultura e muito mais! </p>
+    <p>Vou estar postando conteudo toda semana </p>
 
-    <p>Nós fazemos parte do Edutech, um grupo de professores totalmente conectados.: programar!</p>
+    <p>Nós fazemos parte do novo ensino medio</p>
 
-     <p>Participantes do Grupo: Manoel Vitor Pinheiro (Professor), Eduarda (Ministrante do curso), Professores e professoras (SEED)</p>
+     <p>Participantes do Grupo: joao vitor  (adimin)</p>
 
      <p> <span> MAIS INFORMAÇÕES: Acompanhem nossas redes socias </span> </p>
      <img ID = "imagem" src="mobile.png"> 
